--- a/wp-content/themes/dna/style.css
+++ b/wp-content/themes/dna/style.css
@@ -140,7 +140,7 @@ body {
   footer .footer-line{background: #e13f30; padding: 10px; text-align: center; color: white; width: 100%; display: inline-block;}
   footer .footer-call-to-action{margin: 0 auto; display: table}
   footer p{color: #757575; font-size: 14px; text-align: left}
-  footer span{background: #e13f30; color: white; padding: 10px; margin: 5px 0; display: block}
+  footer span{background: #e13f30; color: white; padding: 10px; margin: 5px 0; display: block; text-align: center}
   footer .footer-divisoria{border-right: 1px solid #b2b2b2; margin-bottom: 30px; height: 100%}
   footer h3{color: #e13f30; text-align: left; font-weight: 700; font-size: 17px; text-transform: uppercase; padding:0 10px; min-height: 40px;}
   footer ul{list-style: none; padding: 7px; font-size: 17px}
